@@ -1,10 +1,8 @@
 
+- Test system
 
 - Look into and fix large file upload problem
-- Test archive extraction
-- Implement passing input and outputdir to blackbox
-- Implement selecting a preinstalled corpora
-- Implement free text submission
+- Confine particular formats to subdirectories
 
 - Write user interface
 
